linux/tools/perf/util/parse-events-bison.output
Terminals unused in grammar

   PE_PREFIX_RAW
   PE_ERROR


Grammar

    0 $accept: events $end

    1 events: events ',' event
    2       | event

    3 event: event_def PE_MODIFIER_EVENT
    4      | event_def

    5 event_def: event_pmu
    6          | event_legacy_symbol
    7          | event_legacy_cache sep_dc
    8          | event_legacy_mem
    9          | event_legacy_tracepoint sep_dc
   10          | event_legacy_numeric sep_dc
   11          | event_legacy_raw sep_dc

   12 event_pmu: PE_NAME '/' event_config '/'

   13 event_legacy_symbol: PE_VALUE_SYM '/' event_config '/'
   14                    | PE_VALUE_SYM sep_slash_dc

   15 event_legacy_cache: PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT '-' PE_NAME_CACHE_OP_RESULT
   16                   | PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT
   17                   | PE_NAME_CACHE_TYPE

   18 event_legacy_mem: PE_PREFIX_MEM PE_VALUE ':' PE_MODIFIER_BP sep_dc
   19                 | PE_PREFIX_MEM PE_VALUE sep_dc

   20 event_legacy_tracepoint: PE_NAME ':' PE_NAME

   21 event_legacy_numeric: PE_VALUE ':' PE_VALUE

   22 event_legacy_raw: PE_RAW

   23 event_config: event_config ',' event_term
   24             | event_term

   25 event_term: PE_NAME '=' PE_NAME
   26           | PE_NAME '=' PE_VALUE
   27           | PE_NAME
   28           | PE_TERM '=' PE_VALUE
   29           | PE_TERM

   30 sep_dc: ':'
   31       | /* empty */

   32 sep_slash_dc: '/'
   33             | ':'
   34             | /* empty */


Terminals, with rules where they appear

$end (0) 0
',' (44) 1 23
'-' (45) 15 16
'/' (47) 12 13 32
':' (58) 18 20 21 30 33
'=' (61) 25 26 28
error (256)
PE_VALUE (258) 18 19 21 26 28
PE_VALUE_SYM (259) 13 14
PE_RAW (260) 22
PE_TERM (261) 28 29
PE_NAME (262) 12 20 25 26 27
PE_MODIFIER_EVENT (263) 3
PE_MODIFIER_BP (264) 18
PE_NAME_CACHE_TYPE (265) 15 16 17
PE_NAME_CACHE_OP_RESULT (266) 15 16
PE_PREFIX_MEM (267) 18 19
PE_PREFIX_RAW (268)
PE_ERROR (269)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
events (21)
    on left: 1 2, on right: 0 1
event (22)
    on left: 3 4, on right: 1 2
event_def (23)
    on left: 5 6 7 8 9 10 11, on right: 3 4
event_pmu (24)
    on left: 12, on right: 5
event_legacy_symbol (25)
    on left: 13 14, on right: 6
event_legacy_cache (26)
    on left: 15 16 17, on right: 7
event_legacy_mem (27)
    on left: 18 19, on right: 8
event_legacy_tracepoint (28)
    on left: 20, on right: 9
event_legacy_numeric (29)
    on left: 21, on right: 10
event_legacy_raw (30)
    on left: 22, on right: 11
event_config (31)
    on left: 23 24, on right: 12 13 23
event_term (32)
    on left: 25 26 27 28 29, on right: 23 24
sep_dc (33)
    on left: 30 31, on right: 7 9 10 11 18 19
sep_slash_dc (34)
    on left: 32 33 34, on right: 14


State 0

    0 $accept: . events $end

    PE_VALUE            shift, and go to state 1
    PE_VALUE_SYM        shift, and go to state 2
    PE_RAW              shift, and go to state 3
    PE_NAME             shift, and go to state 4
    PE_NAME_CACHE_TYPE  shift, and go to state 5
    PE_PREFIX_MEM       shift, and go to state 6

    events                   go to state 7
    event                    go to state 8
    event_def                go to state 9
    event_pmu                go to state 10
    event_legacy_symbol      go to state 11
    event_legacy_cache       go to state 12
    event_legacy_mem         go to state 13
    event_legacy_tracepoint  go to state 14
    event_legacy_numeric     go to state 15
    event_legacy_raw         go to state 16


State 1

   21 event_legacy_numeric: PE_VALUE . ':' PE_VALUE

    ':'  shift, and go to state 17


State 2

   13 event_legacy_symbol: PE_VALUE_SYM . '/' event_config '/'
   14                    | PE_VALUE_SYM . sep_slash_dc

    '/'  shift, and go to state 18
    ':'  shift, and go to state 19

    $default  reduce using rule 34 (sep_slash_dc)

    sep_slash_dc  go to state 20


State 3

   22 event_legacy_raw: PE_RAW .

    $default  reduce using rule 22 (event_legacy_raw)


State 4

   12 event_pmu: PE_NAME . '/' event_config '/'
   20 event_legacy_tracepoint: PE_NAME . ':' PE_NAME

    '/'  shift, and go to state 21
    ':'  shift, and go to state 22


State 5

   15 event_legacy_cache: PE_NAME_CACHE_TYPE . '-' PE_NAME_CACHE_OP_RESULT '-' PE_NAME_CACHE_OP_RESULT
   16                   | PE_NAME_CACHE_TYPE . '-' PE_NAME_CACHE_OP_RESULT
   17                   | PE_NAME_CACHE_TYPE .

    '-'  shift, and go to state 23

    $default  reduce using rule 17 (event_legacy_cache)


State 6

   18 event_legacy_mem: PE_PREFIX_MEM . PE_VALUE ':' PE_MODIFIER_BP sep_dc
   19                 | PE_PREFIX_MEM . PE_VALUE sep_dc

    PE_VALUE  shift, and go to state 24


State 7

    0 $accept: events . $end
    1 events: events . ',' event

    $end  shift, and go to state 25
    ','   shift, and go to state 26


State 8

    2 events: event .

    $default  reduce using rule 2 (events)


State 9

    3 event: event_def . PE_MODIFIER_EVENT
    4      | event_def .

    PE_MODIFIER_EVENT  shift, and go to state 27

    $default  reduce using rule 4 (event)


State 10

    5 event_def: event_pmu .

    $default  reduce using rule 5 (event_def)


State 11

    6 event_def: event_legacy_symbol .

    $default  reduce using rule 6 (event_def)


State 12

    7 event_def: event_legacy_cache . sep_dc

    ':'  shift, and go to state 28

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 29


State 13

    8 event_def: event_legacy_mem .

    $default  reduce using rule 8 (event_def)


State 14

    9 event_def: event_legacy_tracepoint . sep_dc

    ':'  shift, and go to state 28

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 30


State 15

   10 event_def: event_legacy_numeric . sep_dc

    ':'  shift, and go to state 28

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 31


State 16

   11 event_def: event_legacy_raw . sep_dc

    ':'  shift, and go to state 28

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 32


State 17

   21 event_legacy_numeric: PE_VALUE ':' . PE_VALUE

    PE_VALUE  shift, and go to state 33


State 18

   13 event_legacy_symbol: PE_VALUE_SYM '/' . event_config '/'
   32 sep_slash_dc: '/' .

    PE_TERM  shift, and go to state 34
    PE_NAME  shift, and go to state 35

    $default  reduce using rule 32 (sep_slash_dc)

    event_config  go to state 36
    event_term    go to state 37


State 19

   33 sep_slash_dc: ':' .

    $default  reduce using rule 33 (sep_slash_dc)


State 20

   14 event_legacy_symbol: PE_VALUE_SYM sep_slash_dc .

    $default  reduce using rule 14 (event_legacy_symbol)


State 21

   12 event_pmu: PE_NAME '/' . event_config '/'

    PE_TERM  shift, and go to state 34
    PE_NAME  shift, and go to state 35

    event_config  go to state 38
    event_term    go to state 37


State 22

   20 event_legacy_tracepoint: PE_NAME ':' . PE_NAME

    PE_NAME  shift, and go to state 39


State 23

   15 event_legacy_cache: PE_NAME_CACHE_TYPE '-' . PE_NAME_CACHE_OP_RESULT '-' PE_NAME_CACHE_OP_RESULT
   16                   | PE_NAME_CACHE_TYPE '-' . PE_NAME_CACHE_OP_RESULT

    PE_NAME_CACHE_OP_RESULT  shift, and go to state 40


State 24

   18 event_legacy_mem: PE_PREFIX_MEM PE_VALUE . ':' PE_MODIFIER_BP sep_dc
   19                 | PE_PREFIX_MEM PE_VALUE . sep_dc

    ':'  shift, and go to state 41

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 42


State 25

    0 $accept: events $end .

    $default  accept


State 26

    1 events: events ',' . event

    PE_VALUE            shift, and go to state 1
    PE_VALUE_SYM        shift, and go to state 2
    PE_RAW              shift, and go to state 3
    PE_NAME             shift, and go to state 4
    PE_NAME_CACHE_TYPE  shift, and go to state 5
    PE_PREFIX_MEM       shift, and go to state 6

    event                    go to state 43
    event_def                go to state 9
    event_pmu                go to state 10
    event_legacy_symbol      go to state 11
    event_legacy_cache       go to state 12
    event_legacy_mem         go to state 13
    event_legacy_tracepoint  go to state 14
    event_legacy_numeric     go to state 15
    event_legacy_raw         go to state 16


State 27

    3 event: event_def PE_MODIFIER_EVENT .

    $default  reduce using rule 3 (event)


State 28

   30 sep_dc: ':' .

    $default  reduce using rule 30 (sep_dc)


State 29

    7 event_def: event_legacy_cache sep_dc .

    $default  reduce using rule 7 (event_def)


State 30

    9 event_def: event_legacy_tracepoint sep_dc .

    $default  reduce using rule 9 (event_def)


State 31

   10 event_def: event_legacy_numeric sep_dc .

    $default  reduce using rule 10 (event_def)


State 32

   11 event_def: event_legacy_raw sep_dc .

    $default  reduce using rule 11 (event_def)


State 33

   21 event_legacy_numeric: PE_VALUE ':' PE_VALUE .

    $default  reduce using rule 21 (event_legacy_numeric)


State 34

   28 event_term: PE_TERM . '=' PE_VALUE
   29           | PE_TERM .

    '='  shift, and go to state 44

    $default  reduce using rule 29 (event_term)


State 35

   25 event_term: PE_NAME . '=' PE_NAME
   26           | PE_NAME . '=' PE_VALUE
   27           | PE_NAME .

    '='  shift, and go to state 45

    $default  reduce using rule 27 (event_term)


State 36

   13 event_legacy_symbol: PE_VALUE_SYM '/' event_config . '/'
   23 event_config: event_config . ',' event_term

    ','  shift, and go to state 46
    '/'  shift, and go to state 47


State 37

   24 event_config: event_term .

    $default  reduce using rule 24 (event_config)


State 38

   12 event_pmu: PE_NAME '/' event_config . '/'
   23 event_config: event_config . ',' event_term

    ','  shift, and go to state 46
    '/'  shift, and go to state 48


State 39

   20 event_legacy_tracepoint: PE_NAME ':' PE_NAME .

    $default  reduce using rule 20 (event_legacy_tracepoint)


State 40

   15 event_legacy_cache: PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT . '-' PE_NAME_CACHE_OP_RESULT
   16                   | PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT .

    '-'  shift, and go to state 49

    $default  reduce using rule 16 (event_legacy_cache)


State 41

   18 event_legacy_mem: PE_PREFIX_MEM PE_VALUE ':' . PE_MODIFIER_BP sep_dc
   30 sep_dc: ':' .

    PE_MODIFIER_BP  shift, and go to state 50

    $default  reduce using rule 30 (sep_dc)


State 42

   19 event_legacy_mem: PE_PREFIX_MEM PE_VALUE sep_dc .

    $default  reduce using rule 19 (event_legacy_mem)


State 43

    1 events: events ',' event .

    $default  reduce using rule 1 (events)


State 44

   28 event_term: PE_TERM '=' . PE_VALUE

    PE_VALUE  shift, and go to state 51


State 45

   25 event_term: PE_NAME '=' . PE_NAME
   26           | PE_NAME '=' . PE_VALUE

    PE_VALUE  shift, and go to state 52
    PE_NAME   shift, and go to state 53


State 46

   23 event_config: event_config ',' . event_term

    PE_TERM  shift, and go to state 34
    PE_NAME  shift, and go to state 35

    event_term  go to state 54


State 47

   13 event_legacy_symbol: PE_VALUE_SYM '/' event_config '/' .

    $default  reduce using rule 13 (event_legacy_symbol)


State 48

   12 event_pmu: PE_NAME '/' event_config '/' .

    $default  reduce using rule 12 (event_pmu)


State 49

   15 event_legacy_cache: PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT '-' . PE_NAME_CACHE_OP_RESULT

    PE_NAME_CACHE_OP_RESULT  shift, and go to state 55


State 50

   18 event_legacy_mem: PE_PREFIX_MEM PE_VALUE ':' PE_MODIFIER_BP . sep_dc

    ':'  shift, and go to state 28

    $default  reduce using rule 31 (sep_dc)

    sep_dc  go to state 56


State 51

   28 event_term: PE_TERM '=' PE_VALUE .

    $default  reduce using rule 28 (event_term)


State 52

   26 event_term: PE_NAME '=' PE_VALUE .

    $default  reduce using rule 26 (event_term)


State 53

   25 event_term: PE_NAME '=' PE_NAME .

    $default  reduce using rule 25 (event_term)


State 54

   23 event_config: event_config ',' event_term .

    $default  reduce using rule 23 (event_config)


State 55

   15 event_legacy_cache: PE_NAME_CACHE_TYPE '-' PE_NAME_CACHE_OP_RESULT '-' PE_NAME_CACHE_OP_RESULT .

    $default  reduce using rule 15 (event_legacy_cache)


State 56

   18 event_legacy_mem: PE_PREFIX_MEM PE_VALUE ':' PE_MODIFIER_BP sep_dc .

    $default  reduce using rule 18 (event_legacy_mem)
